--- a/personal_assistant/app_news/templates/app_news/index.html
+++ b/personal_assistant/app_news/templates/app_news/index.html
@@ -1,27 +1,30 @@
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
-    <h1>Choose what you want to see:</h1>
-    <table>
-        <tr>
-            <th>Category</th>
-            <th>Link</th>
-        </tr>
-        <tr>
-            <td>News</td>
-            <td><a href="{% url 'app_news:news' %}">Go to News</a></td>
-        </tr>
-        <tr>
-            <td>Sport News</td>
-            <td><a href="{% url 'app_news:sport' %}">Go to Sport News</a></td>
-        </tr>
-        <tr>
-            <td>Currency</td>
-            <td><a href="{% url 'app_news:currency' %}">Go to Currency</a></td>
-        </tr>
-        <tr>
-            <td>Weather</td>
-            <td><a href="{% url 'app_news:weather' %}">Go to Weather</a></td>
-        </tr>
-    </table>
+    <h2>Choose what you want to see:</h2>
+    <div class="bd-example">
+        <table class="table">
+            <tr>
+                <th>Category</th>
+                <th>Link</th>
+            </tr>
+            <tr>
+                <td>News</td>
+                <td><a href="{% url 'app_news:news' %}">Go to News</a></td>
+            </tr>
+            <tr>
+                <td>Sport News</td>
+                <td><a href="{% url 'app_news:sport' %}">Go to Sport News</a></td>
+            </tr>
+            <tr>
+                <td>Currency</td>
+                <td><a href="{% url 'app_news:currency' %}">Go to Currency</a></td>
+            </tr>
+            <tr>
+                <td>Weather</td>
+                <td><a href="{% url 'app_news:weather' %}">Go to Weather</a></td>
+            </tr>
+        </table>
+    </div>
+
 {% endblock %}
