--- a/personal_assistant/app_news/templates/app_news/scrape_news_sport.html
+++ b/personal_assistant/app_news/templates/app_news/scrape_news_sport.html
@@ -1,12 +1,25 @@
 {% extends "app_assistant/base.html" %}
 
+<h2>Global News</h2>
+
 {% block content %}
-    <h1>Sport News</h1>
-    {% for item in sport_news %}
-        <div>
-            <p>{{ item.time }}</p>
-            <p>{{ item.sport }}</p>
-            <h2>{{ item.news }}</h2>
-        </div>
-    {% endfor %}
+
+<h2>Sports news</h2>
+
+{% for item in sport_news %}
+<br>
+<div class="card" style="box-shadow: 2px 2px 3px -2px rgba(0, 0, 0, 0.3);">
+    <div class="card-header">
+        <span class="badge rounded-pill badge-details-activated increase-size">{{item.time}}</span>
+        <span class="badge rounded-pill text-bg-primary increase-size">{{item.sport}}</span>
+    </div>
+    <div class="card-body">
+      <blockquote class="blockquote mb-0">
+        <p>{{item.news}}</p>
+        <footer class="blockquote-footer" style="font-size: 14px;">{{news_url}}</footer>
+      </blockquote>
+    </div>
+</div>
+{% endfor %}
+<br>
 {% endblock %}
