--- a/personal_assistant/app_news/templates/app_news/weather_form.html
+++ b/personal_assistant/app_news/templates/app_news/weather_form.html
@@ -1,39 +1,42 @@
 {% extends "app_assistant/base.html" %}
 {% block content %}
-    <h2>Weather Information</h2>
+    <h2 class="mt-4 mb-4">Weather Information</h2>
     <form method="post">
         {% csrf_token %}
-
-        <div class="bd-example" style="display: inline-block">
-            <div class="d-grid col-6 d-md-block gap-2 mx-auto">
-
-              <label for="city">Enter city:</label>
-              <input type="text" id="city" name="city" class="form-control" style="width: 100% !important;">
-              <br>
-              <label for="days">Enter number of days (optional):</label>
-              <input type="number" id="days" name="days" min="1" max="10">
-              <br>
-              <input type="submit" class="btn btn-primary" style="margin-top: 20px;" value="Get Weather">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="input-group mb-3">
+                        <input type="text" id="city" name="city" class="form-control" placeholder="Enter city" aria-label="Enter city" aria-describedby="basic-addon2">
+                        <button class="btn btn-primary" type="submit">Get Weather</button>
+                    </div>
+                </div>
             </div>
         </div>
     </form>
     <br>
-
     {% if temperature and description %}
-        <table border="1">
-            <tr>
-                <th>City</th>
-                <th>Temperature (°C)</th>
-                <th>Description</th>
-            </tr>
-            <tr>
-                <td>{{ city }}</td>
-                <td>{{ temperature }}</td>
-                <td>{{ description }}</td>
-            </tr>
-        </table>
+        <div class="container">
+            <table class="table table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">City</th>
+                        <th scope="col">Temperature (°C)</th>
+                        <th scope="col">Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ city }}</td>
+                        <td>{{ temperature }}</td>
+                        <td>{{ description }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     {% elif error %}
-        <p>{{ error }}</p>
+        <div class="container">
+            <p class="alert alert-danger">{{ error }}</p>
+        </div>
     {% endif %}
 {% endblock %}
-
