--- a/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
@@ -28,7 +28,7 @@
   <div class="card">
 
     <div class="card-header">
-      Phone numbers list:
+      Phone-numbers list:
     </div>
     <div class="card-body">
       <div class="row g-2">
