Fixed frontend bug: edit_contact.html

--- a/personal_assistant/app_contacts/templates/app_contacts/contact.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/contact.html
@@ -16,7 +16,7 @@
 
         <div class="card mb-3">
             <h5 class="card-header">
-                Номер телефону
+                Phone-number:
             </h5>
             <div class="card-body">
                 {{ phone_number_form.as_p }}
@@ -25,14 +25,14 @@
 
         <div class="card mb-3">
             <h5 class="card-header">
-                Email адреса
+                Email:
             </h5>
             <div class="card-body">
                 {{ email_address_form.as_p }}
             </div>
         </div>
             
-        <button type="submit" class="btn btn-primary mb-3">Зберегти контакт</button>
+        <button type="submit" class="btn btn-primary mb-3">Save contact</button>
 
     </form>
 
