Implementation styles for search_contacts.html + text alignments (weather_form, all_contacts)

--- a/personal_assistant/app_contacts/templates/app_contacts/all_contacts.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/all_contacts.html
@@ -14,7 +14,7 @@
 
 
 {% if contacts %}
-    <h1 style="padding-left: 1rem;">Contact List</h1>
+    <h2 style="padding-left: 1rem;">Contacts list</h2>
 
     <div class="bd-example">
         <table class="table">
