--- a/personal_assistant/app_news/templates/app_news/weather_form.html
+++ b/personal_assistant/app_news/templates/app_news/weather_form.html
@@ -1,6 +1,6 @@
 {% extends "app_assistant/base.html" %}
 {% block content %}
-    <h2 class="mt-4 mb-4">Weather Information</h2>
+    <h2 class="mt-4 mb-4" style="text-align: center;">Weather Information</h2>
     <form method="post">
         {% csrf_token %}
         <div class="container">
