initial app_download

--- a/personal_assistant/app_assistant/templates/app_assistant/base.html
+++ b/personal_assistant/app_assistant/templates/app_assistant/base.html
@@ -50,6 +50,7 @@
           <span class="nav-item">Notes</span>
         </a>
       </li>
+      
       <li>
         <a class="nav-link text-white" href="{% url 'app_news:form_news' %}">
           <i class="fa-solid fa-earth-americas"></i>
@@ -57,7 +58,7 @@
         </a>
       </li>
       <li>
-        <a class="nav-link text-white" href="#">
+        <a class="nav-link text-white" href="{% url 'app_download:files_browser' %}">
           <i class="fa-solid fa-folders"></i>
           <span class="nav-item">Files browser</span>
         </a>
