--- a/personal_assistant/app_download/templates/app_download/music.html
+++ b/personal_assistant/app_download/templates/app_download/music.html
@@ -4,7 +4,7 @@
 <h1>Your music</h1>
 <div class="row">
 
-{% for m in music %}
+{% for m in music_list %}
 <div class="card" style="width: 18rem;">
     <img src="/media/{{m.path}}" class="card-img-top" alt="...">
     <div class="card-body">
