--- a/personal_assistant/app_download/templates/app_download/video.html
+++ b/personal_assistant/app_download/templates/app_download/video.html
@@ -4,7 +4,7 @@
 <h1>Your video</h1>
 <div class="row">
 
-{% for v in video %}
+{% for v in video_list %}
 <div class="card" style="width: 18rem;">
     <img src="/media/{{v.path}}" class="card-img-top" alt="...">
     <div class="card-body">
