--- a/personal_assistant/app_download/templates/app_download/other.html
+++ b/personal_assistant/app_download/templates/app_download/other.html
@@ -4,7 +4,7 @@
 <h1>Your files</h1>
 <div class="row">
 
-{% for f in files %}
+{% for f in other_list %}
 <div class="card" style="width: 18rem;">
     <img src="/media/{{f.path}}" class="card-img-top" alt="...">
     <div class="card-body">
