--- a/personal_assistant/app_download/templates/app_download/archive.html
+++ b/personal_assistant/app_download/templates/app_download/archive.html
@@ -4,15 +4,30 @@
 <h2>Your archives</h2>
 <div class="row">
 
-{% for p in photo %}
-<div class="card" style="width: 18rem;">
-    <img src="/media/{{p.path}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">your archives</h5>
-      <p class="card-text">{{p.description}}</p>
-      
-    </div>
+  {% if archive_list %}
+  <div class="bd-example">
+      <table class="table">
+          <thead>
+          <tr>
+              <th scope="col">Description</th>
+              <th scope="col">Original filename</th>
+              <th scope="col">###</th>
+          </tr>
+          </thead>
+          <tbody>
+              {% for f in archive_list %}
+                  <tr>
+                      <th scope="row">
+                        <i class="fa-solid fa-file-alt" style="color: #8224e3; margin-right: 5px;"></i>{{ f.description }}
+                      </th>
+                      <td>{{ f.path }}</td>
+                      <td><p>test</p></td>
+                  </tr>
+              {% endfor %}
+          </tbody>
+      </table>
   </div>
-{% endfor %}
+  <br>
+{% endif %}
 </div>
 {% endblock %}
