--- a/personal_assistant/app_download/templates/app_download/files.html
+++ b/personal_assistant/app_download/templates/app_download/files.html
@@ -1,17 +1,34 @@
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
-<h1>Your files</h1>
+<h1>Your all files</h1>
 <div class="row">
 
-{% for f in files %}
-<div class="card" style="width: 18rem;">
-    <img src="/media/{{f.path}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">your file</h5>
-      <p class="card-text">{{f.description}}</p>
-      </div>
+  {% if files %}
+  <div class="bd-example">
+      <table class="table">
+          <thead>
+          <tr>
+              <th scope="col">Description</th>
+              <th scope="col">Original filename</th>
+              <th scope="col">###</th>
+          </tr>
+          </thead>
+          <tbody>
+              {% for f in files %}
+                  <tr>
+                      <th scope="row">
+                        <i class="fa-solid fa-file-alt" style="color: #8224e3; margin-right: 5px;"></i>{{ f.description }}
+                      </th>
+                      <td>{{ f.path }}</td>
+                      <td><p>test</p></td>
+                  </tr>
+              {% endfor %}
+          </tbody>
+      </table>
   </div>
-{% endfor %}
+  <br>
+{% endif %}
+
 </div>
 {% endblock %}
