--- a/personal_assistant/app_download/templates/app_download/video.html
+++ b/personal_assistant/app_download/templates/app_download/video.html
@@ -1,18 +1,33 @@
 {% extends "app_assistant/base.html" %}
 
 {% block content %}
-<h1>Your video</h1>
+<h1>Your videos</h1>
 <div class="row">
 
-{% for v in video_list %}
-<div class="card" style="width: 18rem;">
-    <img src="/media/{{v.path}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">your video</h5>
-      <p class="card-text">{{v.description}}</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+  {% if video_list %}
+  <div class="bd-example">
+      <table class="table">
+          <thead>
+          <tr>
+              <th scope="col">Description</th>
+              <th scope="col">Original filename</th>
+              <th scope="col">###</th>
+          </tr>
+          </thead>
+          <tbody>
+              {% for f in video_list %}
+                  <tr>
+                      <th scope="row">
+                        <i class="fa-solid fa-file-alt" style="color: #8224e3; margin-right: 5px;"></i>{{ f.description }}
+                      </th>
+                      <td>{{ f.path }}</td>
+                      <td><p>test</p></td>
+                  </tr>
+              {% endfor %}
+          </tbody>
+      </table>
   </div>
-{% endfor %}
+  <br>
+{% endif %}
 </div>
 {% endblock %}
