--- a/personal_assistant/app_download/templates/app_download/index.html
+++ b/personal_assistant/app_download/templates/app_download/index.html
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <td>Sport News</td>
-                <td><a href="{% url 'app_download:files' %}">Files</a></td>
+                <td><a href="{% url 'app_download:files' %}">All categories files</a></td>
             </tr>
             <tr>
                 <td>Currency</td>
