--- a/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
+++ b/personal_assistant/app_contacts/templates/app_contacts/edit_contact.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2>Редагувати контакт: {{ contact.fullname }}</h2>
+<h2>Edit contact: {{ contact.fullname }}</h2>
 
 <form method="post">
     {% csrf_token %}
